<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@color/background_dark"
    android:gravity="center">
    
    <TextView
        android:id="@+id/rank_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_rank_caption"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginBottom="30dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_total_time"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    
    <TextView
        android:id="@+id/total_time_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="15dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_total_attempt"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"/>
    
    <TextView
        android:id="@+id/total_attempt_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/btn_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_restart"
            android:layout_marginEnd="20dp"/>
        
        <Button
            android:id="@+id/btn_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_btn_quit"/>
    
    </LinearLayout>

</LinearLayout>
